// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button component default Should render button component  1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F4AB34",
      "borderColor": "transparent",
      "borderRadius": 6,
      "borderWidth": 0,
      "flexDirection": "row",
      "height": 48,
      "justifyContent": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <Text
    accessibilityLabel="string"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FFFFFF",
          "fontFamily": "Roboto-Bold",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
        },
      ]
    }
    type="default"
  >
    STRING
  </Text>
</View>
`;

exports[`Button component default when is card type Should render button component  1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#F4AB34",
      "borderColor": "transparent",
      "borderRadius": 6,
      "borderWidth": 0,
      "flexDirection": "row",
      "height": 80,
      "justifyContent": "center",
      "opacity": 1,
      "width": 128,
    }
  }
>
  <Text
    accessibilityLabel="test"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#FFFFFF",
          "fontFamily": "Roboto-Bold",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
          "lineHeight": 22,
          "textAlign": "center",
          "width": 64,
        },
      ]
    }
    type="card"
  >
    TEST
  </Text>
  <Image
    source={
      Object {
        "testUri": "../../../lib/assets/icons/ic_arrow_left_white.png",
      }
    }
    style={
      Array [
        Object {
          "height": 30,
          "width": 30,
        },
      ]
    }
  />
</View>
`;

exports[`Button component default when is outline type Should render outline button component 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderColor": "#F4AB34",
      "borderRadius": 6,
      "borderWidth": 2,
      "flexDirection": "row",
      "height": 48,
      "justifyContent": "center",
      "opacity": 1,
      "width": "100%",
    }
  }
>
  <Text
    accessibilityLabel="test"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#F4AB34",
          "fontFamily": "Roboto-Bold",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
        },
      ]
    }
    type="outline"
  >
    TEST
  </Text>
</View>
`;

exports[`Button component default when is short type Should render short button component 1`] = `
<View
  accessibilityRole="button"
  accessible={true}
  isTVSelectable={true}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    Object {
      "alignItems": "center",
      "backgroundColor": "#FFFFFF",
      "borderColor": "transparent",
      "borderRadius": 6,
      "borderWidth": 0,
      "flexDirection": "row",
      "height": 40,
      "justifyContent": "center",
      "opacity": 1,
      "width": 328,
    }
  }
>
  <Text
    accessibilityLabel="test"
    style={
      Array [
        Object {
          "alignSelf": "center",
          "color": "#F4AB34",
          "fontFamily": "Roboto-Bold",
          "fontSize": 14,
          "fontWeight": "bold",
          "letterSpacing": 1,
        },
      ]
    }
    type="short"
  >
    TEST
  </Text>
</View>
`;
